--- a/htmls/Standard-color.html
+++ b/htmls/Standard-color.html
@@ -14,7 +14,7 @@
     
     <body>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <div class="container-fluid">
                 
                 <a class="nav-link active navbar-brand" href="../">NPTU</a>
@@ -63,7 +63,7 @@
             </div>
         </nav>
 
-        <div class="container" style="margin-top: 10px;">
+        <div class="container" style="margin-top: 5em;">
 
             <div class="row">
                 <h3>標準色</h3>
