--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         
         <div class="container pt-5">
             <h4 style="text-align: center;">This is a website that talking about how to maintain nptu and cnc website </h4>
+            <h5>Something about git:</h5>
+            <p>Git is a tool that to control version of a software </p>
             
         </div>
         <div class="container" style="position: relative; display: block; height: 25cm;">
