--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <li class="nav-item dropdown cursor">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="javascript:void(0)">學術單位</a>
                             <ul class="dropdown-menu navbar-dark">
-                                <li><a class="dropdown-item" href="#">CH</a></li>
-                                <li><a class="dropdown-item" href="#">EN</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/academic-unit/tree/main/ch">CH</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/academic-unit/tree/main/en">EN</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown cursor">
