--- a/index.html
+++ b/index.html
@@ -80,35 +80,94 @@
             <p>此網站僅適用於屏東大學計網中心網頁維護。</p>
             <br/>
             <div class="container-fluid tb">
-                <div class="row">
+                <div class="row r1">
                     <span class="col-2">專案名稱</span>
-                    <span class="col-3">HTML</span>
+                    <span class="col-2">HTML</span>
                     <span class="col-3">CSS</span>
                     <span class="col-3">Js</span>
-                    <span class="col-1">其他</span>
+                    <span class="col-2">Include</span>
                 </div>
-                <div class="row">
+                <div class="row r1">
                     <span class="col-2">教職員資訊</span>
-                    <span class="col-3"><a href="https://github.com/nptu-cnc/Employee-Info">Git</a></span>
-                    <span class="col-3">後台>教職員/學生資訊CSS</span>
-                    <span class="col-3">後台>教職員/學生資訊CSS</span>
-                    <span class="col-1">None</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Employee-Info">Git</a></span>
+                    <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
+                    <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
+                    <span class="col-2">
+                        cnc-icon.css<br>
+                        employee.js<br>
+                        employee.css<br>
+                    </span>
                 </div>
-                <div class="row">
+                <div class="row r1">
                     <span class="col-2">學生資訊</span>
-                    <span class="col-3"><a href="https://github.com/nptu-cnc/Student-info">Git</a></span>
-                    <span class="col-3">後台>教職員/學生資訊CSS</span>
-                    <span class="col-3">後台>教職員/學生資訊CSS</span>
-                    <span class="col-1">None</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Student-info">Git</a></span>
+                    <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
+                    <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
+                    <span class="col-2">
+                        cnc-icon.css<br>
+                        student.js<br>
+                        student.css<br>
+                    </span>
                 </div>
-                <div class="row">
+                <div class="row r1">
                     <span class="col-2">行政單位(CH)</span>
-                    <span class="col-3"><a href="https://github.com/nptu-cnc/Administrative-unit/tree/main/ch">Git</a></span>
-                    <span class="col-3">後台>行政/學術單位</span>
-                    <span class="col-3">後台>行政/學術單位</span>
-                    <span class="col-1">None</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Administrative-unit/tree/main/ch">Git</a></span>
+                    <span class="col-3">文檔管理>行政/學術單位</span>
+                    <span class="col-3">文檔管理>行政/學術單位</span>
+                    <span class="col-2">
+                        desktop.css<br>
+                        tablet.css<br>
+                        mobile.css<br>
+                        mobile.js
+                    </span>
+                </div>
+                <div class="row r1">
+                    <span class="col-2">學術單位(CH)</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Academic-unit/tree/main/ch/Reconstruct">Git</a></span>
+                    <span class="col-3">文檔管理>行政/學術單位</span>
+                    <span class="col-3">文檔管理>行政/學術單位</span>
+                    <span class="col-2">
+                        desktop.css<br>
+                        tablet.css<br>
+                        mobile.css<br>
+                        mobile.js
+                    </span>
+                </div>
+                <div class="row r1">
+                    <span class="col-2">行政單位(EN)</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Administrative-unit/tree/main/en">Git</a></span>
+                    <span class="col-3">Include in html file</span>
+                    <span class="col-3">Include in html file</span>
+                    <span class="col-2">None</span>
+                </div>
+                <div class="row r1">
+                    <span class="col-2">學術單位(EN)</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Academic-unit/tree/main/en/Reconstruct/Done">Git</a></span>
+                    <span class="col-3">文檔管理 > academic css</span>
+                    <span class="col-3">文檔管理 > academic css</span>
+                    <span class="col-2">
+                        desktop.css<br>
+                        tablet.css<br>
+                        mobile.css<br>
+                        mobile.js
+                    </span>
+                </div>
+                <div class="row r1">
+                    <span class="col-2">URL List</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/URL_List">Git</a></span>
+                    <span class="col-3">Include in HTML file</span>
+                    <span class="col-3">Include in HTML file</span>
+                    <span class="col-2">None</span>
+                </div>
+                <div class="row r1">
+                    <span class="col-2">Other</span>
+                    <span class="col-2"><a href="https://github.com/nptu-cnc/Other">Git</a></span>
+                    <span class="col-3">None</span>
+                    <span class="col-3">None</span>
+                    <span class="col-2">None</span>
                 </div>
             </div>
+
             
         </div>
         <div class="container" style="position: relative; display: block; height: 25cm;">
