--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <p>此網站僅適用於屏東大學計網中心網頁維護。</p>
             <br/>
             <div class="container-fluid tb">
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">專案名稱</span>
                     <span class="col-2">HTML</span>
                     <span class="col-3">CSS</span>
                     <span class="col-3">Js</span>
                     <span class="col-2">Include</span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">教職員資訊</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Employee-Info">Git</a></span>
                     <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
@@ -98,7 +98,7 @@
                         employee.css<br>
                     </span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">學生資訊</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Student-info">Git</a></span>
                     <span class="col-3">文檔管理>教職員/學生資訊CSS</span>
@@ -109,7 +109,7 @@
                         student.css<br>
                     </span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">行政單位(CH)</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Administrative-unit/tree/main/ch">Git</a></span>
                     <span class="col-3">文檔管理>行政/學術單位</span>
@@ -121,7 +121,7 @@
                         mobile.js
                     </span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">學術單位(CH)</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Academic-unit/tree/main/ch/Reconstruct">Git</a></span>
                     <span class="col-3">文檔管理>行政/學術單位</span>
@@ -133,14 +133,14 @@
                         mobile.js
                     </span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">行政單位(EN)</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Administrative-unit/tree/main/en">Git</a></span>
                     <span class="col-3">Include in html file</span>
                     <span class="col-3">Include in html file</span>
                     <span class="col-2">None</span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">學術單位(EN)</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Academic-unit/tree/main/en/Reconstruct/Done">Git</a></span>
                     <span class="col-3">文檔管理 > academic css</span>
@@ -152,14 +152,14 @@
                         mobile.js
                     </span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">URL List</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/URL_List">Git</a></span>
                     <span class="col-3">Include in HTML file</span>
                     <span class="col-3">Include in HTML file</span>
                     <span class="col-2">None</span>
                 </div>
-                <div class="row r1">
+                <div class="row row-table">
                     <span class="col-2">Other</span>
                     <span class="col-2"><a href="https://github.com/nptu-cnc/Other">Git</a></span>
                     <span class="col-3">None</span>
