--- a/htmls/Standard-color.html
+++ b/htmls/Standard-color.html
@@ -26,38 +26,50 @@
                     <ul class="navbar-nav">
 
                         <li class="nav-item cursor">
-                            <a class="nav-link">形象頁</a>
-                        </li>
-                        <li class="nav-item  cursor">
-                            <a class="nav-link active" href="./htmls/Standard-color.html">屏大標準色</a>
+                            <a class="nav-link" href="https://github.com/nptu-cnc/front.nptu">形象頁</a>
                         </li>
                         <li class="nav-item cursor">
-                            <a class="nav-link">教職員資訊</a>
+                            <a class="nav-link" href="https://github.com/nptu-cnc/Employee-Info">教職員資訊</a>
                         </li>
                         <li class="nav-item cursor">
-                            <a class="nav-link">學生資訊</a>
-                        </li>
-                        <li class="nav-item cursor">
-                            <a class="nav-link">Icon List</a>
-                        </li>
-                        <li class="nav-item cursor">
-                            <a class="nav-link">其他</a>
+                            <a class="nav-link" href="https://github.com/nptu-cnc/Student-info">學生資訊</a>
                         </li>
                         <li class="nav-item dropdown cursor">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="javascript:void(0)">學術單位</a>
                             <ul class="dropdown-menu navbar-dark">
-                                <li><a class="dropdown-item" href="#">CH</a></li>
-                                <li><a class="dropdown-item" href="#">EN</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/academic-unit/tree/main/ch">CH</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/academic-unit/tree/main/en">EN</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown cursor">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="javascript:void(0)">行政單位</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">CH</a></li>
-                                <li><a class="dropdown-item" href="#">EN</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/Administrative-unit/tree/main/ch">CH</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/Administrative-unit/tree/main/en">EN</a></li>
                             </ul>
                         </li>
-                        
+                        <li class="nav-item dropdown cursor">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="javascript:void(0)">其他</a>
+                            <ul class="dropdown-menu navbar-dark">
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/">Icon List</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/">URL List</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/">Back Top</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/nptu-cnc/">Cookie Redirect</a></li>
+                                <li><a class="dropdown-item" href="./htmls/Standard-color.html">屏大標準色</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown cursor">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="javascript:void(0)">教學</a>
+                            <ul class="dropdown-menu navbar-dark">
+                                <li><a class="dropdown-item" href="./htmls/git.html">Git</a></li>
+                                <li><a class="dropdown-item" href="./htmls/vscode.html">Vscode</a></li>
+                                <li><a class="dropdown-item" href="./htmls/front.html">形象頁維護</a></li>
+                                <li><a class="dropdown-item" href="./htmls/">教職員資訊維護</a></li>
+                                <li><a class="dropdown-item" href="./htmls/">學生資訊維護</a></li>
+                                <li><a class="dropdown-item" href="./htmls/">學術與行政單位維護</a></li>
+                                <li><a class="dropdown-item" href="./htmls/">Rpage版Bootstrap教學</a></li>
+                            </ul>
+                        </li>
 
                     </ul>
                 </div>
@@ -154,6 +166,14 @@
             
         </div>
 
-        <footer class="bg-dark">Copyright © 2021 National Pingtung University All Rights Reserved.</footer>
+        <footer class="bg-dark container-fluid">
+            <div class="row">
+                <span class="col-4"></span>
+                <span class="col-4">Copyright © 2021 National Pingtung University All Rights Reserved.</span>
+                <span class="col-2"></span>
+                <a href="https://nptu-cnc.github.io/Problem_Report/" style="color: aliceblue;text-decoration: none;" class="col-2">Problem Report</a>
+            </div>
+
+        </footer>
     </body>
 </html>
