--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,19 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--這裡兩個js由html-loader處理-->
+    
     <script src="../node_modules/vue/dist/vue.global.js"></script>
     <script src="../node_modules/vue-router/dist/vue-router.global.js"></script>
+    
     <!--這裡將會插入進入點-->
 </head>
 
 <body>
     <Bar></Bar>
-    <router-view></router-view>
+    <div class="container-lg">
+        <router-view></router-view>
+    </div>
+    <Foot></Foot>
 </body>
 
 </html>
